# viba-club-concierge

./: .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  SUBMISSION_WRITEUP.md  pyproject.toml  requirements.txt
notebooks/: eleanor_walkthrough.ipynb
scripts/: demo.py  ui.html  webapp.py
tests/: test_viba.py
viba_concierge/agents/: adk_app.py  domains.py  live.py  orchestrator.py
viba_concierge/core/: domains.py  governing_docs.py  logging.py  member_profile.py  orchestrator.py  policy.py
viba_concierge/guardrails/: policy.py
viba_concierge/mcp_servers/: connectors.py  seed_data.py  serve.py
viba_concierge/memory/: member_profile.py
viba_concierge/rag/: governing_docs.py
